--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <main>
-      <h1>Etch-a-Sketch</h1>
+    <main class="main">
+      <div>
+        <h1>Etch-a-Sketch</h1>
+        <div class="buttons">
+          <button id="size-button">change size</button>
+          <button id="clear-button">clear canvas</button>
+          <button id="rainbow">rainbow mode</button>
+        </div>
+      </div>
+      <div id="grid">
+        <div class="canvas"></div>
+      </div>
     </main>
     <script src="index.js"></script>
   </body>
